added basic functionalities

--- a/kanban_project/src/App.css
+++ b/kanban_project/src/App.css
@@ -36,3 +36,21 @@
     transform: rotate(360deg);
   }
 }
+
+*{
+  padding: 0;
+}
+
+
+#task-lists-container{
+  display:flex;
+  column-gap: 50px;
+
+}
+
+#task-lists-container ul{
+  list-style-type: none;
+
+
+}
+
