--- a/kanban_project/src/App.css
+++ b/kanban_project/src/App.css
@@ -41,6 +41,10 @@
   padding: 0;
 }
 
+body{
+  background-color: #282c34;
+}
+
 
 #task-lists-container{
   display:flex;
@@ -51,6 +55,22 @@
 #task-lists-container ul{
   list-style-type: none;
 
+}
+
+.task-header{
+  display: flex;
+  box-sizing: border-box;
+  column-gap: 100px;
 
 }
 
+.task-container{
+  background-color: white;
+}
+
+#add-task-container{
+  background-color: white;
+  padding: 10px;
+  max-width: 250px;
+
+}
